# BG-RDF

./: .gitignore  README.md  TODO.md  pyproject.toml  server.sh
.github/workflow/: publish.yaml
.github/workflows/: publish.yaml
bg-rdf/: pyproject.toml
doc/: ontology.html
examples/: RCR.ttl  RCR_reduced.ttl  RCR_simplified.ttl  example_1.ttl  example_2.ttl  example_A1.ttl  example_A1_simplified.ttl  example_A2.ttl  example_A2_reduced.ttl  example_A2_simplified.ttl  example_A3.ttl  example_A3_reduced.ttl  example_A3_simplified.ttl  example_B1.ttl  example_B1_reduced.ttl  example_B1_simplified.ttl  example_B2.ttl  example_B2_reduced.ttl  example_B2_simplified.ttl  example_RC.ttl  example_RCR.ttl  example_RC_simplified.ttl
pmr/Simple_biochemical_reaction/: FAIRDO BG example 3.4.cellml  FAIRDO BG example 3.4.sedml  manifest.xml
pmr/Simple_electrical_circuit/: !!autogen-disclaimer.txt  FAIRDO BG example 3.1.1.cellml  FAIRDO BG example 3.1.1.sedml  FAIRDO BG example 3.1.cellml  FAIRDO BG example 3.1.sedml  manifest.xml
schema/: ontology.ttl
schema/2025-08-13/: ontology.ttl
schema/2026-01-21/: ontology.ttl
schema/elements/: biochemical.ttl  chemical.ttl  electrical.ttl  general.ttl  hydraulic.ttl  mechanical.ttl
templates/: chemical.ttl  electrical.ttl  hydraulic.ttl  mechanical.ttl
tools/bg2cellml/bondgraph/: bondgraph.py  framework.py
