[project]
name = "devel"
description = "General development and testing"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "dot-viewer",

    "networkx>=3.3"
]

[tool.uv.sources]
dot-viewer = { workspace = true }

[tool.uv.workspace]
members = [
    "dot",
]
